# codenames-rs

./: .gitignore  Cargo.toml  Dockerfile  Trunk.toml  builder.Dockerfile  dev.Dockerfile  docker-compose.yaml  prod.Dockerfile  run.sh  trunk.Dockerfile
back_end/: Cargo.toml  wordlist-eng.json
back_end/src/: front_end_handler.rs  game.rs  game_repo.rs  game_service.rs  main.rs
back_end/src/api/: health_handler.rs  mod.rs
back_end/src/api/v1/: events_handler.rs  join_game_handler.rs  mod.rs  new_game_handler.rs  player_joined_handler.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/api/v1/: models.rs
front_end/: Cargo.toml  index.html
front_end/src/: api.rs  app.rs  game.rs  main.rs  menu.rs  simple_input.rs
