[package]
name = "back_end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
futures = { version = "0.3", default-features = false }
rand = "0.8"
redis = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.27", features = ["full"] }
uuid = { version = "1.3", features = ["v4"] }
warp = "0.3"
