[package]
name = "front_end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
futures = { version = "0.3", default-features = false }
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [] }
yew = { version = "0.20", features = ["csr"] }
